# staticli

./: Cargo.toml  README.md
src/: cmd.rs  lib.rs  main.rs
