[package]
name = "staticli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive", "cargo"] }
clap-verbosity-flag = "2.0.1"
confy = "0.5.1"
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
console = "0.15.7"
